--- a/package.json
+++ b/package.json
@@ -3,9 +3,11 @@
   "version": "1.0.0",
   "description": "React Hook to show if window is focused or not",
   "main": "dist/index.js",
-  "module": "dist/index.modern.js",
+  "typings": "dist/index.d.ts",
+  "module": "dist/use-window-focus.esm.js",
   "files": [
-    "dist"
+    "dist",
+    "src"
   ],
   "repository": "jpalumickas/use-window-focus",
   "author": {
@@ -14,15 +16,38 @@
     "url": "jpalumickas.com"
   },
   "license": "MIT",
-  "devDependencies": {
-    "microbundle": "^0.12.0",
-    "rimraf": "^3.0.2"
-  },
   "scripts": {
-    "build": "rimraf dist && microbundle build --no-compress -f modern,cjs",
-    "watch": "microbundle watch --no-compress"
+    "start": "tsdx watch",
+    "build": "tsdx build",
+    "test": "tsdx test --passWithNoTests",
+    "lint": "tsdx lint src",
+    "prepare": "tsdx build"
   },
   "peerDependencies": {
-    "react": "^16.8.0"
+    "react": ">=16.8"
+  },
+  "devDependencies": {
+    "@types/react": "^16.9.43",
+    "@types/react-dom": "^16.9.8",
+    "husky": "^4.2.5",
+    "react": "^16.13.1",
+    "react-dom": "^16.13.1",
+    "tsdx": "^0.13.2",
+    "tslib": "^2.0.0",
+    "typescript": "^3.9.7"
+  },
+  "prettier": {
+    "printWidth": 80,
+    "semi": true,
+    "singleQuote": true,
+    "trailingComma": "es5"
+  },
+  "husky": {
+    "hooks": {
+      "pre-commit": "tsdx lint src"
+    }
+  },
+  "engines": {
+    "node": ">=10"
   }
 }
