--- a/package.json
+++ b/package.json
@@ -49,5 +49,13 @@
   },
   "engines": {
     "node": ">=10"
-  }
+  },
+  "keywords": [
+    "react",
+    "hooks",
+    "typescript",
+    "javascript",
+    "window",
+    "focus"
+  ]
 }
