--- a/package.json
+++ b/package.json
@@ -27,11 +27,14 @@
     "react": ">=16.8"
   },
   "devDependencies": {
+    "@testing-library/react": "^11.0.4",
+    "@testing-library/react-hooks": "^3.4.1",
     "@types/react": "^16.9.49",
     "@types/react-dom": "^16.9.8",
     "husky": "^4.3.0",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
+    "react-test-renderer": "^16.13.1",
     "tsdx": "^0.13.3",
     "tslib": "^2.0.1",
     "typescript": "^3.9.7"
