--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -8,12 +8,13 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
-    - uses: actions/checkout@v2
+    - name: Checkout
+      uses: actions/checkout@v3
 
-    - name: Use Node.js 16
-      uses: actions/setup-node@v1
+    - name: Use Node.js 18
+      uses: actions/setup-node@v3
       with:
-        node-version: 16.x
+        node-version: 18
 
     - name: Get yarn cache directory path
       id: yarn-cache-dir-path
@@ -28,7 +29,7 @@ jobs:
           ${{ runner.os }}-yarn-
 
     - name: Install dependencies
-      run: yarn install
+      run: yarn install --frozen-lockfile
 
     - name: Build
       run: yarn build
