--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,14 @@
 dist
 node_modules
-yarn-error*.log
 .DS_Store
 .cache
+
+# Yarn
+.pnp.*
+.yarn/*
+!.yarn/patches
+!.yarn/plugins
+!.yarn/releases
+!.yarn/sdks
+!.yarn/versions
+yarn-error*.log
