--- a/package.json
+++ b/package.json
@@ -27,18 +27,17 @@
   },
   "devDependencies": {
     "@testing-library/react": "^16.2.0",
-    "@testing-library/react-hooks": "^8.0.1",
-    "@types/jest": "^29.5.14",
-    "@types/react": "^18.3.18",
-    "@types/react-dom": "^18.3.5",
+    "@types/jest": "^30.0.0",
+    "@types/react": "^19.1.15",
+    "@types/react-dom": "^19.1.9",
     "husky": "^9.1.7",
-    "jest": "^29.7.0",
-    "jest-environment-jsdom": "^29.7.0",
-    "lint-staged": "^15.4.3",
+    "jest": "^30.2.0",
+    "jest-environment-jsdom": "^30.2.0",
+    "lint-staged": "^16.2.3",
     "microbundle": "^0.15.1",
-    "react": "^18.3.1",
-    "react-dom": "^18.3.1",
-    "react-test-renderer": "^18.3.1",
+    "react": "^19.1.1",
+    "react-dom": "^19.1.1",
+    "react-test-renderer": "^19.1.1",
     "rimraf": "^6.0.1",
     "ts-jest": "^29.2.5",
     "tslib": "^2.8.1",
@@ -67,5 +66,5 @@
     "window",
     "focus"
   ],
-  "packageManager": "yarn@4.6.0"
+  "packageManager": "pnpm@10.17.1+sha512.17c560fca4867ae9473a3899ad84a88334914f379be46d455cbf92e5cf4b39d34985d452d2583baf19967fa76cb5c17bc9e245529d0b98745721aa7200ecaf7a"
 }
